fix blob not visible

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,8 +17,9 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  
   color: var(--text-color);
+}
+body {
   background-color: var(--background-color);
 }
 
